Import of RPETTETT/GD-Sparkline-0.02 from CPAN.
gitpan-cpan-distribution: GD-Sparkline
gitpan-cpan-version:      0.02
gitpan-cpan-path:         RPETTETT/GD-Sparkline-0.02.tar.gz
gitpan-cpan-author:       RPETTETT
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,1 +1,4 @@
+0.02 Fixed off by one error
+     Extended to support different chart types using 't' param (t='b' by default)
+
 0.01 Initial release
