--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.03 Fixed divide-by-zero, thanks for the report, Todd!
+     Added a few more tests
+
 0.02 Fixed off by one error
      Extended to support different chart types using 't' param (t='b' by default)
 
