--- a/Changes
+++ b/Changes
@@ -1,3 +1,5 @@
+0.04 Added transparent background support (b="transparent")
+
 0.03 Fixed divide-by-zero, thanks for the report, Todd!
      Added a few more tests
 
