--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.05 Minor perlcritic adjustments. Also hoping a rebuild will fix
+     CPANTS license complaints.
+
 0.04 Added transparent background support (b="transparent")
 
 0.03 Fixed divide-by-zero, thanks for the report, Todd!
